# libspline

./: CMakeLists.txt  README.md  clean.bat  compile.bat  generateheader.py  makefile
.github/workflows/: test.yml
include/: spline.h  spline.test.h  splinec.h
src/: CMakeLists.txt  compile.bat  compileobj.bat  libspline.cc  libspline.h  makefile  spline.cc  spline.h
test/: CMakeLists.txt  cpptest  ctest  test.cc  testspline.py
